[gd_scene load_steps=41 format=3 uid="uid://c2e2hmw035cvv"]

[ext_resource type="Script" path="res://PlayerAnimations.gd" id="2_i53hd"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="5_2xnvu"]
[ext_resource type="Script" path="res://PlayerParticles.gd" id="5_ks2nr"]
[ext_resource type="Texture2D" uid="uid://b3rytiu1p4kxu" path="res://Assets/Textures/Idle1.png" id="6_boip0"]
[ext_resource type="PackedScene" uid="uid://cddpy8wn110kt" path="res://Scenes/health_component.tscn" id="7_jbvia"]
[ext_resource type="Texture2D" uid="uid://cn8bwu11l2wj4" path="res://Assets/Textures/Run1-Sheet.png" id="7_rg2jw"]
[ext_resource type="Texture2D" uid="uid://cokqlsoinxnxi" path="res://Assets/Textures/Slash3.png" id="8_lpii5"]
[ext_resource type="Texture2D" uid="uid://b3mbwkpmg8ycu" path="res://Assets/Textures/HealthBarTop.png" id="9_3eqo5"]
[ext_resource type="Texture2D" uid="uid://cmhbro3us7ukd" path="res://Assets/Textures/HealthBarBottom.png" id="10_hyhxv"]
[ext_resource type="PackedScene" uid="uid://ba6xnuhkpqhew" path="res://hitbox_component.tscn" id="11_5gnw2"]
[ext_resource type="Script" path="res://Scenes/TextureProgressBar.gd" id="11_8h7df"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xbk5"]
size = Vector2(44.5, 81)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hb2my"]
radius = 25.0
height = 102.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3x0x0"]
atlas = ExtResource("6_boip0")
region = Rect2(0, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_pthrm"]
atlas = ExtResource("6_boip0")
region = Rect2(96, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_q07pb"]
atlas = ExtResource("6_boip0")
region = Rect2(0, 112, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bhc6"]
atlas = ExtResource("7_rg2jw")
region = Rect2(0, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_02ntg"]
atlas = ExtResource("7_rg2jw")
region = Rect2(96, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lle8"]
atlas = ExtResource("7_rg2jw")
region = Rect2(192, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5lsy"]
atlas = ExtResource("7_rg2jw")
region = Rect2(288, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk67d"]
atlas = ExtResource("7_rg2jw")
region = Rect2(384, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf6lr"]
atlas = ExtResource("7_rg2jw")
region = Rect2(480, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h5fe"]
atlas = ExtResource("7_rg2jw")
region = Rect2(576, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp42t"]
atlas = ExtResource("8_lpii5")
region = Rect2(0, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tpoj"]
atlas = ExtResource("8_lpii5")
region = Rect2(130, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_385sd"]
atlas = ExtResource("8_lpii5")
region = Rect2(260, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_km04x"]
atlas = ExtResource("8_lpii5")
region = Rect2(390, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3o8u"]
atlas = ExtResource("8_lpii5")
region = Rect2(520, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnrfv"]
atlas = ExtResource("8_lpii5")
region = Rect2(650, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk74h"]
atlas = ExtResource("8_lpii5")
region = Rect2(780, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_r363i"]
atlas = ExtResource("8_lpii5")
region = Rect2(910, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej4ae"]
atlas = ExtResource("8_lpii5")
region = Rect2(1040, 0, 130, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dome"]
atlas = ExtResource("8_lpii5")
region = Rect2(1170, 0, 130, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_dpc2o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x0x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pthrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q07pb")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bhc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02ntg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lle8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5lsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk67d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf6lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h5fe")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp42t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tpoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_385sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_km04x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3o8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnrfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk74h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r363i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej4ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dome")
}],
"loop": true,
"name": &"Slash1",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3jf04"]
resource_name = "Idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_d83su"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimationManager/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationManager/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_o1fut"]
resource_name = "Run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimationManager/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationManager/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_rnad5"]
resource_name = "Slash1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimationManager/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Slash1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimationManager/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tieuu"]
_data = {
"Idle": SubResource("Animation_3jf04"),
"RESET": SubResource("Animation_d83su"),
"Run": SubResource("Animation_o1fut"),
"Slash1": SubResource("Animation_rnad5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w0p8k"]
radius = 18.0
height = 80.0

[node name="PlayerContainer" type="Node2D"]
position = Vector2(369, 547)

[node name="Player" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_2xnvu")

[node name="AttackHitbox" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/AttackHitbox"]
position = Vector2(44.75, 6.5)
shape = SubResource("RectangleShape2D_7xbk5")
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" groups=["Hurtbox"]]
position = Vector2(-3, 5)
shape = SubResource("CapsuleShape2D_hb2my")
metadata/_edit_lock_ = true

[node name="ParticleManager" type="Node" parent="Player"]
script = ExtResource("5_ks2nr")

[node name="SandParticles" type="CPUParticles2D" parent="Player/ParticleManager"]
unique_name_in_owner = true
emitting = false
amount = 10
speed_scale = 2.33
explosiveness = 0.11
randomness = 0.59
emission_shape = 3
emission_rect_extents = Vector2(32, 1)
direction = Vector2(1, -1)
spread = 180.0
gravity = Vector2(2.08165e-12, 2)
angular_velocity_max = 1.0
angle_max = 359.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color = Color(1, 0.788235, 0.247059, 1)

[node name="AnimationManager" type="Node2D" parent="Player"]
script = ExtResource("2_i53hd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player/AnimationManager"]
sprite_frames = SubResource("SpriteFrames_dpc2o")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/AnimationManager"]
libraries = {
"": SubResource("AnimationLibrary_tieuu")
}

[node name="HealthComponent" parent="." instance=ExtResource("7_jbvia")]

[node name="HealthBar" type="TextureProgressBar" parent="HealthComponent"]
texture_filter = 1
offset_left = -360.0
offset_top = -377.0
offset_right = -179.0
offset_bottom = -337.0
value = 100.0
texture_over = ExtResource("9_3eqo5")
texture_progress = ExtResource("10_hyhxv")
script = ExtResource("11_8h7df")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("11_5gnw2")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-3, 6)
shape = SubResource("CapsuleShape2D_w0p8k")

[connection signal="body_entered" from="Player/AttackHitbox" to="Player" method="_attack_hitbox_body_entered"]
